nginx/deployment.generated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"nginx.l"},"name":"nginx.d","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"nginx.l"}},"template":{"metadata":{"labels":{"app":"nginx.l"}},"spec":{"containers":[{"image":"nginx","name":"nginx","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2023-06-09T12:16:02Z"
  generation: 1
  labels:
    app: nginx.l
  name: nginx.d
  namespace: default
  resourceVersion: "19798"
  uid: 7dc91886-ff6b-4b76-940a-6d54f3fcfd2f
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx.l
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx.l
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2023-06-09T12:16:02Z"
    lastUpdateTime: "2023-06-09T12:17:37Z"
    message: ReplicaSet "nginx.d-5df755788d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-06-09T13:43:13Z"
    lastUpdateTime: "2023-06-09T13:43:13Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
