nginx/deployment.yaml
# to make this deployment available in an arbitrary namespace x execute
# kubectl apply -f ./deployment.yaml --namespace=x
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-d
  labels:
    app: nginx-l
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-l
  template:
    metadata:
      labels:
        app: nginx-l
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8080
