nginx/ingress.yaml
# run
#   minikube addons enable ingress
#   kubectl apply -f ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: nginx-s
            port:
              number: 80
